/*
 * $Id: ChangeLog,v 1.4 2002/09/06 15:42:47 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-06 21:54 UTC +0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * make_b32.bat
    * Updated little fixies

2002-09-06 08:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * make_b32.bat
    * Modified to use makefile.bc
  + makefile.bc
    + Added standard makefile.
  + env
  + env/bccwin32.mak
  + env/makelib.b32
  + env/makeb32.env
    + added folder and files used by new makefile.bc

2002-07-22 20:45 UTC -0300 Luiz Rafael Culik<culikr@uol.com.br>
   * Source/_winrect.c
      INTERSECTRECT() function Return an Array on Success, NIL on Failure
      COPYRECT() function Return an Array on Success, NIL on Failure
      SETRECTEMPTY() function Return an Array on Success, NIL on Failure
      SETRECT() function Return an Array on Success, NIL on Failure
      UNIONRECT() function Return an Array on Success, NIL on Failure
      SUBTRACTRECT() function Return an Array on Success, NIL on Failure
23/07/2002 AJ Wos
      Moved ValidateRect from _WinRgn.c to WinRect.c
      Added toolbar.ch
      Added tbstruct.ch
24/07/2002 AJ Wos
      Corrected parameters in GetObject() -> cObjBytes:=GetObject(hObj)
25/07/2002 AJ Wos
      What32.ch updated, more pseudo-functions added
25/07/2002 August Infante
      WhBrowse: Corrected parameters for vertical alignment now it accepts TA_TOP / TA_CENTER / TA_BOTTOM
25/07/2002 August Infante
      WinPie: Slices explode now via oPie:Explode(nSlice,nPorcentage)
27/07/2002 AJ Wos
      Updated Wintypes.ch IMAGELIST type added
      Updated WinStru.ch cleaned up NMHDR added
      toolbar.ch updated - REBAR defines added
      tbstruct.ch created - REBAR structures
      ErrorSys.Prg bug fixed
28/07/2002 AJ Wos
      Updated What32.ch MAKELPARAM definition added
03/08/2002 AJ Wos